Wed Dec  4 21:08:52 CET 2002  Jochen Eisinger <c0ffee@penguin-breeder.org>

	* Verify signature payload for signed messages. Affected files
	  irssi/src/silc/core/client_ops.h, irssi/src/silc/core/silc-servers.c,
	  irssi/src/silc/core/silc-core.h

	* Display signature verification result in public and private
	  messages using theme abstracts. See irssi/default.theme for
	  examples on their usage. Affected files
	  irssi/default.theme, irssi/src/fe-common/silc/fe-messages.h,
	  irssi/src/fe-common/silc/module-formats.[ch],
	  irssi/src/fe-common/silc/fe-common-silc.c,
	  irssi/src/fe-common/silc/Makefile.am
	  irssi/src/fe-common/core/fe-messages.[ch]

	* Fixed bugs in Irssi's theme parsing. Affected files
	  irssi/src/fe-common/core/themes.c
	  
Wed Dec  4 18:29:13 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Calculate the correct length for signed messages before
	  encrypting, it must be multiple by block size.  Affected
	  file lib/silccore/silcmessage.c.

	* silc_message_signed_get_public_key returns now both
	  decoded and encoded public key.  Affected files are
	  lib/silccore/silcmessage.[ch].

	* Added libtoolfix script that makes the libtool more generic
	  and configurable in run-time.  Now we can specify in run-time
	  if what kind of libraries we want to create, regardless of
	  configuration.  SIMs are now creates even if --disable-shared
	  was explicitly given.

Tue Dec  3 23:26:55 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed founder key sending in CMODE command in client.
	  Affected file lib/silcclient/command.c.

	* Fixed CUMODE founder authentication in server to not check
	  for client's public key since it's not supposed to do that.
	  Affected file silcd/command.c.

Tue Dec  3 12:02:41 CET 2002  Jochen Eisinger <c0ffee@penguin-breeder.org>

	* Set realname and hostname in NICK_REC records. Affected file
	  irssi/src/silc/core/silc-nicklist.c

Mon Dec  2 20:50:20 EET 2002  Pekka Riikonen <priikone@silcnet.org>
