@@ -1,3 +1,9 @@
+Thu Dec  5 16:35:23 EET 2002  Pekka Riikonen <priikone@silcnet.org>
+
+	* Added ignore_message_signatures setting which can be used
+	  to ignore signatures in messages.  Affected files are
+	  irssi/src/silc/core/client_ops.c, silc-core.c.
+
 Wed Dec  4 21:08:52 CET 2002  Jochen Eisinger <c0ffee@penguin-breeder.org>
 
 	* Verify signature payload for signed messages. Affected files
